--- a/README
+++ b/README
@@ -1,4 +1,3 @@
 Hi! Just wanted to let you know that GitHub doesn't let you see the UX from IpyWidgets. 
 Also, many of the query outputs are long so I deleted the outputs when I uploaded this (there was almost 4,000 lines with the outputs)
-To see the UX and outputs, please view my demo video (must be signed in with USC email)! 
-https://drive.google.com/file/d/1VBXsWeMyvW5um1GUpP0F91hXPIH9sXKx/view?usp=sharing
+To see the UX and outputs, please view my demo video! 
