--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Hi! Just wanted to let you know that GitHub doesn't let you see the UX from IpyWidgets, which are used to interact with the data. 
 Also, many of the query outputs are long so I deleted the outputs when I uploaded this (there was almost 4,000 lines with the outputs)
 To see the UX and outputs, please view my demo video! 
+Link: https://drive.google.com/file/d/1Y_uCGzc-VZVk1uDq014XLrTxnDvfeo6v/view?usp=sharing
